<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大学生头条</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="hello">Hello World, LoginActivity!</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_register_link">没有帐号？</string>
    
</resources>
